apps/sonarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
      annotations:
        homelab.dev/rollout-nonce: "2025-11-16-02"
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr@sha256:76414c033f290d3c9f1f9dfad71150abe71d92592369a3377a5903d579e6e2b2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: library-tv
              mountPath: /media/tv
            - name: library-movies
              mountPath: /media/movies
            - name: library-anime
              mountPath: /media/anime
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              memory: 1Gi
      volumes:
        - name: library-tv
          hostPath:
            path: /mnt/gdrive/Videos/tv
            type: Directory
        - name: library-movies
          hostPath:
            path: /mnt/gdrive/Videos/movies
            type: Directory
        - name: library-anime
          hostPath:
            path: /mnt/gdrive/Videos/anime
            type: Directory
        - name: downloads
          hostPath:
            path: /downloads
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
